Storing RemoteClients in WeakHashMap.